[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/color_picker.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/app.gd" type="Script" id=2]
[ext_resource path="res://scenes/Panel.tscn" type="PackedScene" id=3]
[ext_resource path="res://styles/new_theme.tres" type="Theme" id=4]
[ext_resource path="res://fonts/Montserrat/Montserrat-Bold.ttf" type="DynamicFontData" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.694118, 0.470588, 0.984314, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.694118, 0.470588, 0.984314, 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("GUI/MarginContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GUI/MarginContainer:anchor_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GUI/MarginContainer:anchor_top")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GUI/MarginContainer:anchor_right")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("GUI/MarginContainer:anchor_bottom")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("GUI/MarginContainer:margin_left")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("GUI/MarginContainer:margin_top")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("GUI/MarginContainer:margin_right")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 340.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("GUI/MarginContainer:margin_bottom")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "move_panel_to_left"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("GUI/MarginContainer:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GUI/MarginContainer:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GUI/MarginContainer:margin_left")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ -340.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GUI/MarginContainer:margin_right")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0.0, 340.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "move_panel_to_right"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("GUI/MarginContainer:anchor_left")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GUI/MarginContainer:anchor_right")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GUI/MarginContainer:margin_left")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0.0, -340.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GUI/MarginContainer:margin_right")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 340.0, 0.0 ]
}

[node name="App" type="Node"]
script = ExtResource( 2 )

[node name="GUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="GUI"]
margin_right = 1010.0
margin_bottom = 586.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="useColorPickerButton" type="Button" parent="GUI"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -84.0
margin_bottom = 20.0
text = "ColorPicker"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="GUI"]
anchor_bottom = 1.0
margin_right = 340.0
size_flags_horizontal = 5
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 30
custom_constants/margin_left = 20
custom_constants/margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" parent="GUI/MarginContainer" instance=ExtResource( 3 )]
margin_left = 20.0
margin_top = 30.0
margin_right = 320.0
margin_bottom = 570.0
rect_min_size = Vector2( 300, 0 )
theme = ExtResource( 4 )

[node name="AboutPanel" type="Panel" parent="GUI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -107.0
margin_top = -69.0
margin_right = 107.0
margin_bottom = 69.0

[node name="CenterContainer" type="CenterContainer" parent="GUI/AboutPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/AboutPanel/CenterContainer"]
margin_left = 31.0
margin_top = 4.0
margin_right = 183.0
margin_bottom = 133.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUI/AboutPanel/CenterContainer/VBoxContainer"]
margin_right = 152.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 5 )
text = "GDpick 0.1.0"
align = 1

[node name="Label2" type="Label" parent="GUI/AboutPanel/CenterContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 152.0
margin_bottom = 41.0
text = "Created by:"
align = 1
autowrap = true

[node name="Label5" type="Label" parent="GUI/AboutPanel/CenterContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 152.0
margin_bottom = 61.0
text = "Andr√©s Gamboa Alfaro"
align = 1

[node name="Label3" type="Label" parent="GUI/AboutPanel/CenterContainer/VBoxContainer"]
margin_top = 65.0
margin_right = 152.0
margin_bottom = 81.0
text = "Made with: Godot Engine"
align = 1

[node name="Label4" type="Label" parent="GUI/AboutPanel/CenterContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 152.0
margin_bottom = 101.0
text = "License: MIT Licence"
align = 1
autowrap = true

[node name="CloseButton" type="Button" parent="GUI/AboutPanel/CenterContainer/VBoxContainer"]
margin_top = 105.0
margin_right = 152.0
margin_bottom = 129.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 5
size_flags_vertical = 5
text = "Close"

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -215.0
margin_top = -140.0
margin_right = 215.0
margin_bottom = 140.0
rect_min_size = Vector2( 150, 52.5 )
theme = ExtResource( 4 )
resizable = true
dialog_hide_on_ok = true
access = 2
current_dir = "/home"
current_file = "pallete"
current_path = "/home/pallete"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPicker" parent="." instance=ExtResource( 1 )]

[node name="screenshotTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "move_panel_to_right"
anims/RESET = SubResource( 2 )
anims/move_panel_to_left = SubResource( 4 )
anims/move_panel_to_right = SubResource( 3 )

[connection signal="pressed" from="GUI/useColorPickerButton" to="." method="_on_useColorPickerButton_pressed"]
[connection signal="about_button_pressed" from="GUI/MarginContainer/Panel" to="." method="_on_Panel_about_button_pressed"]
[connection signal="export_button_pressed" from="GUI/MarginContainer/Panel" to="." method="_on_Panel_export_button_pressed"]
[connection signal="picker_selected" from="GUI/MarginContainer/Panel" to="." method="_on_Panel_picker_selected"]
[connection signal="pressed" from="GUI/AboutPanel/CenterContainer/VBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="confirmed" from="FileDialog" to="." method="_on_FileDialog_confirmed"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_dir_selected"]
[connection signal="color_picked" from="ColorPicker" to="." method="_on_ColorPicker_color_picked"]
[connection signal="timeout" from="screenshotTimer" to="." method="_on_screenshotTimer_timeout"]
